Fix timeslider overlap issue

--- a/static/css/timeslider.css
+++ b/static/css/timeslider.css
@@ -1,5 +1,6 @@
 #editorcontainerbox {
   overflow: auto;
+  top:40px;
 }
 
 #padcontent {
